для_форму_стараюсь

--- a/setting.ini
+++ b/setting.ini
@@ -1,5 +1,5 @@
 ﻿; Максимально допустимая температура видеокарт
-MAX_TEMP = "80"
+MAX_TEMP = "10"
 
 ; Минимально допустимый процент загрузки ядра
 ; Если меньше то перезагрузка фермы
@@ -12,11 +12,12 @@ MIN_CORE = "-1"
 ; Как токен получить в инете есть инфа, после того как создадите канал приглосите бота в него
 ; и что-нибудь там напишите
 ; https://api.telegram.org/bot%TOKEN%/getUpdates  открыв эту ссылку можете посомтреть ID CHAT
-TELEGRAM_CHATID = "-############"
-TELEGRAM_TOKEN = "######:####################"
+; TestHotDog / testhotdog_bot / TestHotDog / https://t.me/joinchat/GXbgZxLM_a7oAJe5EKeRrQ
+TELEGRAM_CHATID = "-315424174"
+TELEGRAM_TOKEN = "598513501:AAGL_bC_BmZSd7nlK_ZUn7ue2SWRtBkbGWk"
 
 
-; Интервал между проверкам
+; Интервал между проверкам в секундах
 CHECK_INTERVAL = "5"
 
 
