--- a/setting.ini
+++ b/setting.ini
@@ -1,11 +1,16 @@
 ﻿; Максимально допустимая температура видеокарт
-MAX_TEMP = "10"
+MAX_TEMP = "80"
 
 ; Минимально допустимый процент загрузки ядра
 ; Если меньше то перезагрузка фермы
 ; -1 Значит отключить эту проверку
-MIN_CORE = "80"
+MIN_CORE = "-1"
 
+
+; Включить или выключить обработку комант телеграм ботом
+; Работает только одна команда, пишешь боту в личку "покажи стату" 
+; и он шлет скрин свой, пока все вот так просто
+LISTEN_ORDER = "1"
 
 ; Идентификатор чата и токен
 ; Как токен получить в инете есть инфа, после того как создадите канал приглосите бота в него
@@ -17,8 +22,7 @@ TELEGRAM_TOKEN = "598513501:AAGL_bC_BmZSd7nlK_ZUn7ue2SWRtBkbGWk"
 
 
 ; Интервал между проверкам в секундах
-CHECK_INTERVAL = "5"
-
+CHECK_INTERVAL = "15"
 
 ; Отступы от краев внутри BAT
 LEFT_MARGHIN = "2"
